--- a/Classwork/0602task/styles.css
+++ b/Classwork/0602task/styles.css
@@ -13,24 +13,25 @@ nav img {
     width: 35px;
     padding: 5px;
     float: left;
-    padding-left: 30px;
+    padding-left:250px;
 }
 
 nav ul {
-  float:left;
+  float:right;
  
 }
 nav ul li {
   position: relative;
-  float: left;
+  float: right;
   list-style: none;
+  padding-right: 250px;
 }
 nav ul li a {
   display: block;
   padding: 12px 10px;
   text-decoration: none;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: black;
+  color: white;
 }
 
 nav ul li ul {
